added location table, fixed drink list, added pics for locations

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Home</title>
         <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="navContact.css">
     </head>
     <body>
         <div id="containerDiv">
@@ -15,24 +16,38 @@
             <br><br>
 
             <div id="mainContentDiv">
+                <h1 id="mainTitle">Welcome to Nam Bistro!</h1>
+                <br>
+
                 <div id="busStatementDiv">
-                    <h3 id="statementTitle">Whate We Do</h3>
-                    <p id="statement">We strive to provide the best food available anywhere in winhoek. All our products are sourced locally right here in namibia to guarantee freshness</p>
+                    <h3 id="statementTitle">What We Do</h3>
+                    <p id="statement">We are a family owned restaurant franchise that strives to provide the best food available anywhere in winhoek. All our products are sourced locally right here in namibia to guarantee freshness</p>
                     <br>
                 </div>
 
-                <br><br>
+                <br><br><br>
 
                 <div id="foodPicsDiv">
                     <img id="foodImg1" src="pictures/item1.jpg" alt="">
                     <img id="foodImg2" src="pictures/item2.jpg" alt="">
                     <img id="foodImg3" src="pictures/item3.jpg" alt="">
+                    <p id="foodDesc">We create our own mouth watering recipes for your enjoyment. Our chef is world class with only the best training and decades of experience! For a more detailed look, check our <a id="foodMenuLink" href="menu.html">menu</a>!</p>
                     <br><br>
                 </div>
 
                 <br><br>
 
-                <div id="reviewsDiv"></div>
+                <div class="line"></div>
+                <br><br><br>
+
+                <div id="locDescContainer">
+                    <h3 id="locDescHead">We have 3 stores accross Windhoek!</h3>
+                    <div id="locDescDiv">
+                        <p id="locDesc">If you feel like treating yourself to some quality food and excellent service, checkout where we are <a href="stores.html" id="storeLink">located</a>!</p>
+                    </div>
+                </div>
+
+                <br><br><br>
             </div>
 
             <br><br>
