--- a/menu.html
+++ b/menu.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="navContact.css">
         <link rel="stylesheet" href="menu.css">
     </head>
     <body>
@@ -15,6 +15,13 @@
 
             <br><br>
 
+            <div id="menuDesc">
+                <h3>Take a look through our menu!</h3>
+            </div>
+
+            <br><br>
+
+            <h3 class="menuTitle">Food</h3>
             <div id="foodDiv">
                 <div class="foodItem">
                     <img src="pictures/item1.jpg" alt="">
@@ -37,8 +44,26 @@
                     <p class="itemDesc">Spoil yourself with the best waffle in the area!</p>
                 </div>
             </div>
-            <div id="drinkListDiv">
+            <br><br>
 
+            <h3 class="menuTitle">Drinks</h3>
+            <div id="drinkListDiv">
+                <h4 id="coldDrinksHead">Cold drinks</h4>
+                <ul id="coldDrinks" class="drinks">
+                    <li>Coke: N$10.99</li>
+                    <li>Fanta: N$10.99</li>
+                    <li>Sprite: N$10.99</li>
+                    <li>Sparkling water: N$9.99</li>
+                </ul>
+
+                <h4 id="hotDrinksHead">Hot drinks</h4>
+                <ul id="hotDrinks" class="drinks">
+                    <li>Tea: N$14.99</li>
+                    <li>Coffee: N$14.99</li>
+                    <li>Cappaccino: N$19.99</li>
+                    <li>Espresso: N$17.99</li>
+                    <br>
+                </ul>
             </div>
 
             <br><br>
