--- a/stores.html
+++ b/stores.html
@@ -1,7 +1,8 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="navContact.css">
+        <link rel="stylesheet" href="stores.css">
     </head>
     <body>
         <div id="containerDiv">
@@ -14,7 +15,31 @@
 
             <br><br>
 
-            <div></div>
+            <h2 id="locDesc">Visit us at any of these locations!<br></h2>
+            <div id="storeTableDiv">
+                <table id="storeTable">
+                    <tr id="headerRecord">
+                        <th></th>
+                        <th>Location</th>
+                        <th>Opening/Closing hours</th>
+                    </tr>
+                    <tr>
+                        <td><img src="pictures/loc1.jpg" alt=""></td>
+                        <td><p>Wernhil Shopping centre shop number 23, center of town in Windhoek</p></td>
+                        <td><p>09H00 / 17H00</p></td>
+                    </tr>
+                    <tr>
+                        <td><img src="pictures/loc2.jpg" alt=""></td>
+                        <td><p>10 Robert Mugabe avenue, center of town near the Independence Museum</p></td>
+                        <td><p>06H00 / 20H00</p></td>
+                    </tr>
+                    <tr>
+                        <td><img src="pictures/loc3.jpg" alt=""></td>
+                        <td><p>22 Uhland Street, klein Windhoek, near Spar</p></td>
+                        <td><p>09H00 / 23H00</p></td>
+                    </tr>
+                </table>
+            </div>
 
             <br><br>
 
