moved css files to folder

--- a/menu.html
+++ b/menu.html
@@ -1,8 +1,8 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel="stylesheet" href="navContact.css">
-        <link rel="stylesheet" href="menu.css">
+        <link rel="stylesheet" href="css/navContact.css">
+        <link rel="stylesheet" href="css/menu.css">
     </head>
     <body>
         <div id="containerDiv">
