--- a/stores.html
+++ b/stores.html
@@ -1,8 +1,8 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel="stylesheet" href="navContact.css">
-        <link rel="stylesheet" href="stores.css">
+        <link rel="stylesheet" href="css/navContact.css">
+        <link rel="stylesheet" href="css/stores.css">
     </head>
     <body>
         <div id="containerDiv">
